CB-25004: DataHub upgrade page should offer only Centos image if multiple OS type is available for runtime upgrade
In this commit I've introduced a new filtering logic for DataHub runtime upgade.
If you retrieving upgrade candidates for your DH cluster with the LATEST_ONLY option the CB will return with Centos based image if your current image is Centos and there are RHRL8 images with the same package versions as the Centos based c$

For example

Current cluster is using 7.2.16 with Centos image

Before this change we showed following upgrade candidates:
- 7.2.17 Runtime upgrade - Centos
- 7.2.17 Runtime upgrade - RHEL8

After my change we'll show only the Centos based image:
- 7.2.17 Runtime upgrade - Centos