@@ -1,5 +1,8 @@
 package com.sequenceiq.distrox.v1.distrox.service.upgrade;
 
+import static com.sequenceiq.common.model.OsType.CENTOS7;
+import static com.sequenceiq.common.model.UpgradeShowAvailableImages.LATEST_ONLY;
+import static com.sequenceiq.common.model.UpgradeShowAvailableImages.SHOW;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -7,18 +10,16 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -26,11 +27,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
 
 import com.sequenceiq.cloudbreak.TestUtil;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.common.ResourceStatus;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.dto.NameOrCrn;
+import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.InternalUpgradeSettings;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.tags.upgrade.UpgradeV4Request;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.response.image.ImageComponentVersions;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.response.image.ImageInfoV4Response;
@@ -42,14 +43,10 @@ import com.sequenceiq.cloudbreak.domain.Blueprint;
 import com.sequenceiq.cloudbreak.domain.BlueprintUpgradeOption;
 import com.sequenceiq.cloudbreak.domain.stack.Stack;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.Cluster;
-import com.sequenceiq.cloudbreak.domain.view.ClusterView;
-import com.sequenceiq.cloudbreak.domain.view.StackView;
 import com.sequenceiq.cloudbreak.service.cluster.ClusterService;
 import com.sequenceiq.cloudbreak.service.image.CurrentImageUsageCondition;
 import com.sequenceiq.cloudbreak.service.stack.RuntimeVersionService;
 import com.sequenceiq.cloudbreak.service.stack.StackService;
-import com.sequenceiq.cloudbreak.service.stack.StackViewService;
-import com.sequenceiq.common.model.OsType;
 import com.sequenceiq.common.model.UpgradeShowAvailableImages;
 import com.sequenceiq.distrox.v1.distrox.StackUpgradeOperations;
 
@@ -68,6 +65,11 @@ public class DistroXUpgradeAvailabilityServiceTest {
 
     private static final long STACK_ID = 2L;
 
+    private static final String ENVIRONMENT_CRN = "envcrn";
+
+    @Mock
+    private DistroXUpgradeResponseFilterService distroXUpgradeResponseFilterService;
+
     @Mock
     private EntitlementService entitlementService;
 
@@ -79,9 +81,6 @@ public class DistroXUpgradeAvailabilityServiceTest {
 
     @Mock
     private ClusterService clusterService;
-
-    @Mock
-    private StackViewService stackViewService;
 
     @Mock
     private RuntimeVersionService runtimeVersionService;
@@ -96,41 +95,18 @@ public class DistroXUpgradeAvailabilityServiceTest {
 
     @BeforeEach
     public void init() {
-        lenient().when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(Boolean.TRUE);
-        prepareStack();
-    }
-
-    private void prepareStack() {
         Blueprint blueprint = TestUtil.blueprint();
         blueprint.setBlueprintUpgradeOption(BlueprintUpgradeOption.ENABLED);
         Cluster cluster = TestUtil.cluster();
         cluster.setBlueprint(blueprint);
         stack.setCluster(cluster);
-        stack.setEnvironmentCrn("envcrn");
+        stack.setEnvironmentCrn(ENVIRONMENT_CRN);
         stack.setId(STACK_ID);
     }
 
     @Test
-    public void testCrnParseException() {
-        Assertions.assertThrows(BadRequestException.class, () -> underTest.isRuntimeUpgradeEnabledByUserCrn("asdf"));
-    }
-
-    @Test
-    public void testNullPointerException() {
-        Assertions.assertThrows(BadRequestException.class, () -> underTest.isRuntimeUpgradeEnabledByUserCrn(null));
-    }
-
-    @Test
-    public void testEntitlementServiceCalled() {
-        boolean result = underTest.isRuntimeUpgradeEnabledByUserCrn(USER_CRN);
-
-        assertTrue(result);
-        verify(entitlementService).datahubRuntimeUpgradeEnabled(ACCOUNT_ID);
-    }
-
-    @Test
     public void testReturnAllCandidates() {
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(LATEST_ONLY, true, true);
         UpgradeV4Response response = new UpgradeV4Response();
         response.setUpgradeCandidates(List.of(mock(ImageInfoV4Response.class), mock(ImageInfoV4Response.class)));
         response.setCurrent(new ImageInfoV4Response());
@@ -147,15 +123,14 @@ public class DistroXUpgradeAvailabilityServiceTest {
         Cluster datalakeCluster = TestUtil.cluster();
         datalakeCluster.setRangerRazEnabled(true);
         stack.setDatalakeCrn(DATALAKE_CRN);
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(LATEST_ONLY, true, false);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response currentImage = createImageResponse(STACK_ID, "7.2.0");
-        ImageInfoV4Response candidateImage1 = createImageResponse(3L, "7.2.1");
-        ImageInfoV4Response candidateImage2 = createImageResponse(4L, "7.2.2");
+        ImageInfoV4Response currentImage = createImageInfoResponse(STACK_ID, "7.2.0");
+        ImageInfoV4Response candidateImage1 = createImageInfoResponse(3L, "7.2.1");
+        ImageInfoV4Response candidateImage2 = createImageInfoResponse(4L, "7.2.2");
 
         response.setUpgradeCandidates(List.of(candidateImage1, candidateImage2));
         response.setCurrent(currentImage);
-        when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(false);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(clusterService.getClusterByStackResourceCrn(DATALAKE_CRN)).thenReturn(datalakeCluster);
@@ -167,21 +142,28 @@ public class DistroXUpgradeAvailabilityServiceTest {
                 exception.getMessage());
     }
 
+    private UpgradeV4Request createRequest(UpgradeShowAvailableImages showAvailableImages, boolean dryRun, boolean dataHubRuntimeUpgradeEntitled) {
+        UpgradeV4Request request = new UpgradeV4Request();
+        request.setShowAvailableImages(showAvailableImages);
+        request.setDryRun(dryRun);
+        request.setInternalUpgradeSettings(new InternalUpgradeSettings(false, dataHubRuntimeUpgradeEntitled, false));
+        return request;
+    }
+
     @Test
     public void testWhenRangerRazDisabledAndEntitlementNotGrantedThenUpgradeAllowed() {
         Cluster datalakeCluster = TestUtil.cluster();
         datalakeCluster.setRangerRazEnabled(false);
         stack.setDatalakeCrn(DATALAKE_CRN);
         stack.setCluster(TestUtil.cluster());
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(LATEST_ONLY, true, false);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response currentImage = createImageResponse(STACK_ID, "7.2.0");
-        ImageInfoV4Response candidateImage1 = createImageResponse(3L, "7.2.1");
-        ImageInfoV4Response candidateImage2 = createImageResponse(4L, "7.2.2");
+        ImageInfoV4Response currentImage = createImageInfoResponse(STACK_ID, "7.2.0");
+        ImageInfoV4Response candidateImage1 = createImageInfoResponse(3L, "7.2.1");
+        ImageInfoV4Response candidateImage2 = createImageInfoResponse(4L, "7.2.2");
 
         response.setUpgradeCandidates(List.of(candidateImage1, candidateImage2));
         response.setCurrent(currentImage);
-        when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(false);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(clusterService.getClusterByStackResourceCrn(any())).thenReturn(datalakeCluster);
@@ -193,15 +175,14 @@ public class DistroXUpgradeAvailabilityServiceTest {
 
     @Test
     public void testWhenRangerRazDisabledAndEntitlementGrantedThenUpgradeAllowed() {
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(LATEST_ONLY, true, true);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response currentImage = createImageResponse(STACK_ID, "7.2.0");
-        ImageInfoV4Response candidateImage1 = createImageResponse(3L, "7.2.1");
-        ImageInfoV4Response candidateImage2 = createImageResponse(4L, "7.2.2");
+        ImageInfoV4Response currentImage = createImageInfoResponse(STACK_ID, "7.2.0");
+        ImageInfoV4Response candidateImage1 = createImageInfoResponse(3L, "7.2.1");
+        ImageInfoV4Response candidateImage2 = createImageInfoResponse(4L, "7.2.2");
 
         response.setUpgradeCandidates(List.of(candidateImage1, candidateImage2));
         response.setCurrent(currentImage);
-        when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(true);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
 
@@ -212,8 +193,7 @@ public class DistroXUpgradeAvailabilityServiceTest {
 
     @Test
     public void testReturnLatestOnlyForDryRun() {
-        UpgradeV4Request request = new UpgradeV4Request();
-        request.setDryRun(Boolean.TRUE);
+        UpgradeV4Request request = createRequest(LATEST_ONLY, true, true);
         UpgradeV4Response response = new UpgradeV4Response();
         ImageInfoV4Response image1 = new ImageInfoV4Response();
         image1.setCreated(1L);
@@ -222,36 +202,41 @@ public class DistroXUpgradeAvailabilityServiceTest {
         ImageInfoV4Response image3 = new ImageInfoV4Response();
         image3.setCreated(5L);
         response.setUpgradeCandidates(List.of(image1, image2, image3));
-        response.setCurrent(new ImageInfoV4Response());
+        response.setCurrent(createImageInfoResponse(STACK_ID, "7.2.0"));
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
+        when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(true);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        when(distroXUpgradeResponseFilterService.filterForLatestImagePerRuntimeAndOs(response.getUpgradeCandidates(), response.getCurrent()))
+                .thenReturn(List.of(image2));
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
         assertEquals(1, result.getUpgradeCandidates().size());
-        assertEquals(8L, result.getUpgradeCandidates().get(0).getCreated());
+        assertEquals(8L, result.getUpgradeCandidates().getFirst().getCreated());
     }
 
     @Test
     public void testLatestByRuntime() {
-        UpgradeV4Request request = new UpgradeV4Request();
-        request.setShowAvailableImages(UpgradeShowAvailableImages.LATEST_ONLY);
+        UpgradeV4Request request = createRequest(LATEST_ONLY, false, true);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "A");
-        ImageInfoV4Response image2 = createImageResponse(8L, "A");
-        ImageInfoV4Response image3 = createImageResponse(6L, "A");
-        ImageInfoV4Response image4 = createImageResponse(1L, "B");
-        ImageInfoV4Response image5 = createImageResponse(4L, "B");
-        ImageInfoV4Response image6 = createImageResponse(3L, "B");
-        ImageInfoV4Response image7 = createImageResponse(9L, "C");
-        ImageInfoV4Response image8 = createImageResponse(8L, "C");
-        ImageInfoV4Response image9 = createImageResponse(6L, "C");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "A");
+        ImageInfoV4Response image2 = createImageInfoResponse(8L, "A");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "A");
+        ImageInfoV4Response image4 = createImageInfoResponse(1L, "B");
+        ImageInfoV4Response image5 = createImageInfoResponse(4L, "B");
+        ImageInfoV4Response image6 = createImageInfoResponse(3L, "B");
+        ImageInfoV4Response image7 = createImageInfoResponse(9L, "C");
+        ImageInfoV4Response image8 = createImageInfoResponse(8L, "C");
+        ImageInfoV4Response image9 = createImageInfoResponse(6L, "C");
         response.setUpgradeCandidates(List.of(image1, image2, image3, image4, image5, image6, image7, image8, image9));
-        response.setCurrent(createImageResponse(STACK_ID, "7.2.0"));
+        response.setCurrent(createImageInfoResponse(STACK_ID, "7.2.0"));
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(true);
+        when(distroXUpgradeResponseFilterService.filterForLatestImagePerRuntimeAndOs(response.getUpgradeCandidates(), response.getCurrent()))
+                .thenReturn(List.of(image2, image5, image7));
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
@@ -263,30 +248,23 @@ public class DistroXUpgradeAvailabilityServiceTest {
 
     @Test
     public void testOnlyReturnCandidatesWithDatalakeVersion() {
-        UpgradeV4Request request = new UpgradeV4Request();
-        request.setShowAvailableImages(UpgradeShowAvailableImages.LATEST_ONLY);
+        UpgradeV4Request request = createRequest(SHOW, false, true);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "A");
-        ImageInfoV4Response image2 = createImageResponse(8L, "A");
-        ImageInfoV4Response image3 = createImageResponse(6L, "A");
-        ImageInfoV4Response image4 = createImageResponse(1L, "B");
-        ImageInfoV4Response image5 = createImageResponse(4L, "B");
-        ImageInfoV4Response image6 = createImageResponse(3L, "B");
-        ImageInfoV4Response image7 = createImageResponse(9L, "C");
-        ImageInfoV4Response image8 = createImageResponse(8L, "C");
-        ImageInfoV4Response image9 = createImageResponse(6L, "C");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "A");
+        ImageInfoV4Response image2 = createImageInfoResponse(8L, "A");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "A");
+        ImageInfoV4Response image4 = createImageInfoResponse(1L, "B");
+        ImageInfoV4Response image5 = createImageInfoResponse(4L, "B");
+        ImageInfoV4Response image6 = createImageInfoResponse(3L, "B");
+        ImageInfoV4Response image7 = createImageInfoResponse(9L, "C");
+        ImageInfoV4Response image8 = createImageInfoResponse(8L, "C");
+        ImageInfoV4Response image9 = createImageInfoResponse(6L, "C");
         response.setUpgradeCandidates(List.of(image1, image2, image3, image4, image5, image6, image7, image8, image9));
-        response.setCurrent(createImageResponse(6L, "C"));
-        StackView stackView = new StackView();
-        ClusterView clusterView = new ClusterView();
-        clusterView.setId(1L);
-        ReflectionTestUtils.setField(stackView, "cluster", clusterView);
+        response.setCurrent(createImageInfoResponse(6L, "C"));
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
-        when(stackViewService.findDatalakeViewByEnvironmentCrn(stack.getEnvironmentCrn())).thenReturn(Optional.of(stackView));
-        when(runtimeVersionService.getRuntimeVersion(eq(clusterView.getId()))).thenReturn(Optional.of("C"));
-        when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(true);
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        when(distroXUpgradeResponseFilterService.filterForDatalakeVersion(ENVIRONMENT_CRN, response)).thenReturn(List.of(image7));
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
@@ -298,7 +276,7 @@ public class DistroXUpgradeAvailabilityServiceTest {
     @DisplayName("this test simulates when the Data Lake and Data Hub version is the same (7.1.0)"
             + "and no upgrade options are available with this version.")
     public void testCheckForUpgradeWhenDataLakeAndDataHubIsOnTheSameVersionAndPatchUpgradeIsAvailable() {
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request =  createRequest(LATEST_ONLY, false, true);
         UpgradeV4Response response = new UpgradeV4Response();
         response.setUpgradeCandidates(List.of());
         response.setCurrent(new ImageInfoV4Response());
@@ -317,29 +295,23 @@ public class DistroXUpgradeAvailabilityServiceTest {
             + "and the only upgrade options for Data Hub is newer than the DL (7.2.0,7.3.0,7.4.0). this will be filtered"
             + "since the upgrade options are newer than the Data Lake. Data Lake upgrade shall be suggested")
     public void testCheckForUpgradeWhenDataLakeAndDataHubIsOnTheSameVersionAndNoUpgradeIsAvailable() {
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(SHOW, false, true);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "7.2.0");
-        ImageInfoV4Response image2 = createImageResponse(8L, "7.3.0");
-        ImageInfoV4Response image3 = createImageResponse(6L, "7.4.0");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "7.2.0");
+        ImageInfoV4Response image2 = createImageInfoResponse(8L, "7.3.0");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "7.4.0");
         response.setUpgradeCandidates(List.of(image1, image2, image3));
-        response.setCurrent(createImageResponse(6L, "7.1.0"));
-        StackView stackView = new StackView();
-        ClusterView clusterView = new ClusterView();
-        clusterView.setId(1L);
-        ReflectionTestUtils.setField(stackView, "cluster", clusterView);
+        response.setCurrent(createImageInfoResponse(6L, "7.1.0"));
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
-        when(stackViewService.findDatalakeViewByEnvironmentCrn(stack.getEnvironmentCrn())).thenReturn(Optional.of(stackView));
-        when(runtimeVersionService.getRuntimeVersion(eq(clusterView.getId()))).thenReturn(Optional.of("7.1.0"));
         when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(false);
-        when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(true);
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        String expectedMessage = "Data Hub can only be upgraded to the same version as the Data Lake. "
+                + "To upgrade your Data Hub, please upgrade your Data Lake first.";
+        when(distroXUpgradeResponseFilterService.filterForDatalakeVersion(ENVIRONMENT_CRN, response)).thenReturn(Collections.emptyList());
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
-        String expectedMessage = "Data Hub can only be upgraded to the same version as the Data Lake (7.1.0). "
-                + "To upgrade your Data Hub, please upgrade your Data Lake first.";
         assertEquals(0, result.getUpgradeCandidates().size());
         assertEquals(expectedMessage, result.getReason());
     }
@@ -349,17 +321,13 @@ public class DistroXUpgradeAvailabilityServiceTest {
             + "and the only upgrade options for Data Hub is newer than the DL (7.2.0,7.3.0,7.4.0). this will NOT be filtered"
             + "since the different Data Hub version entitlement is enabled")
     public void testCheckForUpgradeWhenDataLakeAndDataHubIsOnTheSameVersionAndUpgradeIsAvailable() {
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(SHOW, false, true);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "7.2.0");
-        ImageInfoV4Response image2 = createImageResponse(8L, "7.3.0");
-        ImageInfoV4Response image3 = createImageResponse(6L, "7.4.0");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "7.2.0");
+        ImageInfoV4Response image2 = createImageInfoResponse(8L, "7.3.0");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "7.4.0");
         response.setUpgradeCandidates(List.of(image1, image2, image3));
         response.setCurrent(new ImageInfoV4Response());
-        StackView stackView = new StackView();
-        ClusterView clusterView = new ClusterView();
-        clusterView.setId(1L);
-        ReflectionTestUtils.setField(stackView, "cluster", clusterView);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(true);
@@ -376,34 +344,24 @@ public class DistroXUpgradeAvailabilityServiceTest {
     public void testCheckForUpgradeWhenDataHubUpgradeIsDisabledAnMultipleMaintenanceUpgradeCandidatesAreAvailable() {
         Cluster datalakeCluster = TestUtil.cluster();
         datalakeCluster.setRangerRazEnabled(false);
-        UpgradeV4Request request = new UpgradeV4Request();
-        request.setDryRun(true);
+        UpgradeV4Request request = createRequest(SHOW, true, false);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response current = createImageResponse(1L, "7.1.0");
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "7.1.0");
-        ImageInfoV4Response image2 = createImageResponse(3L, "7.1.0");
-        ImageInfoV4Response image3 = createImageResponse(6L, "7.3.0");
+        ImageInfoV4Response current = createImageInfoResponse(1L, "7.1.0");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "7.1.0");
+        ImageInfoV4Response image2 = createImageInfoResponse(3L, "7.1.0");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "7.3.0");
         response.setUpgradeCandidates(List.of(image1, image2, image3));
         response.setCurrent(current);
-        StackView stackView = new StackView();
-        ClusterView clusterView = new ClusterView();
-        clusterView.setId(1L);
-        ReflectionTestUtils.setField(stackView, "cluster", clusterView);
-        stack.setCluster(TestUtil.cluster());
-        when(runtimeVersionService.getRuntimeVersion(any())).thenReturn(Optional.of("C"));
         when(clusterService.getClusterByStackResourceCrn(any())).thenReturn(datalakeCluster);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
-        when(entitlementService.datahubRuntimeUpgradeEnabled(ACCOUNT_ID)).thenReturn(false);
         when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(false);
-        when(stackViewService.findDatalakeViewByEnvironmentCrn(stack.getEnvironmentCrn())).thenReturn(Optional.of(stackView));
-        when(runtimeVersionService.getRuntimeVersion(eq(clusterView.getId()))).thenReturn(Optional.of("7.1.0"));
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        when(distroXUpgradeResponseFilterService.filterForDatalakeVersion(ENVIRONMENT_CRN, response)).thenReturn(List.of(image2));
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
         assertEquals(1, result.getUpgradeCandidates().size());
-        verify(entitlementService, times(1)).datahubRuntimeUpgradeEnabled(ACCOUNT_ID);
         assertTrue(result.getUpgradeCandidates().stream().anyMatch(img -> img.getCreated() == 3L && "7.1.0".equals(img.getComponentVersions().getCdp())));
     }
 
@@ -413,22 +371,23 @@ public class DistroXUpgradeAvailabilityServiceTest {
     public void testCheckForUpgradeWhenDataHubUpgradeIsGaAndOneMaintenanceUpgradeCandidateIsAvailable() {
         Cluster datalakeCluster = TestUtil.cluster();
         datalakeCluster.setRangerRazEnabled(false);
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(SHOW, false, false);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response current = createImageResponse(1L, "7.1.0");
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "7.1.0");
-        ImageInfoV4Response image2 = createImageResponse(8L, "7.2.0");
-        ImageInfoV4Response image3 = createImageResponse(6L, "7.3.0");
+        ImageInfoV4Response current = createImageInfoResponse(1L, "7.1.0");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "7.1.0");
+        ImageInfoV4Response image2 = createImageInfoResponse(8L, "7.2.0");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "7.3.0");
         response.setUpgradeCandidates(List.of(image1, image2, image3));
         response.setCurrent(current);
         stack.getCluster().getBlueprint().setBlueprintUpgradeOption(BlueprintUpgradeOption.GA);
+        when(clusterService.getClusterByStackResourceCrn(any())).thenReturn(datalakeCluster);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(true);
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
-        verify(entitlementService, times(1)).datahubRuntimeUpgradeEnabled(ACCOUNT_ID);
         assertEquals(3, result.getUpgradeCandidates().size());
         assertTrue(result.getUpgradeCandidates().stream().anyMatch(img -> img.getCreated() == STACK_ID && "7.1.0".equals(img.getComponentVersions().getCdp())));
     }
@@ -439,31 +398,32 @@ public class DistroXUpgradeAvailabilityServiceTest {
     public void testCheckForUpgradeWhenDataHubUpgradeIsNotGaAndOneMaintenanceUpgradeCandidateIsAvailable() {
         Cluster datalakeCluster = TestUtil.cluster();
         datalakeCluster.setRangerRazEnabled(false);
-        UpgradeV4Request request = new UpgradeV4Request();
+        UpgradeV4Request request = createRequest(SHOW, false, false);
         UpgradeV4Response response = new UpgradeV4Response();
-        ImageInfoV4Response current = createImageResponse(1L, "7.1.0");
-        ImageInfoV4Response image1 = createImageResponse(STACK_ID, "7.1.0");
-        ImageInfoV4Response image2 = createImageResponse(8L, "7.2.0");
-        ImageInfoV4Response image3 = createImageResponse(6L, "7.3.0");
+        ImageInfoV4Response current = createImageInfoResponse(1L, "7.1.0");
+        ImageInfoV4Response image1 = createImageInfoResponse(STACK_ID, "7.1.0");
+        ImageInfoV4Response image2 = createImageInfoResponse(8L, "7.2.0");
+        ImageInfoV4Response image3 = createImageInfoResponse(6L, "7.3.0");
         response.setUpgradeCandidates(List.of(image1, image2, image3));
         response.setCurrent(current);
         stack.getCluster().getBlueprint().setStatus(ResourceStatus.USER_MANAGED);
         stack.getCluster().getBlueprint().setBlueprintUpgradeOption(BlueprintUpgradeOption.OS_UPGRADE_DISABLED);
+        when(clusterService.getClusterByStackResourceCrn(any())).thenReturn(datalakeCluster);
         when(stackService.getByNameOrCrnInWorkspace(CLUSTER, WORKSPACE_ID)).thenReturn(stack);
         when(stackUpgradeOperations.checkForClusterUpgrade(ACCOUNT_ID, stack, request)).thenReturn(response);
         when(currentImageUsageCondition.currentImageUsedOnInstances(any(), any())).thenReturn(true);
+        when(entitlementService.isDifferentDataHubAndDataLakeVersionAllowed(anyString())).thenReturn(true);
 
         UpgradeV4Response result = underTest.checkForUpgrade(CLUSTER, WORKSPACE_ID, request, USER_CRN);
 
-        verify(entitlementService, times(1)).datahubRuntimeUpgradeEnabled(ACCOUNT_ID);
         assertEquals(3, result.getUpgradeCandidates().size());
         assertTrue(result.getUpgradeCandidates().stream().anyMatch(img -> img.getCreated() == STACK_ID && "7.1.0".equals(img.getComponentVersions().getCdp())));
     }
 
-    private ImageInfoV4Response createImageResponse(long creation, String cdp) {
+    private ImageInfoV4Response createImageInfoResponse(long creation, String cdp) {
         ImageInfoV4Response image = new ImageInfoV4Response();
         image.setCreated(creation);
-        image.setComponentVersions(new ImageComponentVersions("dontcare", "dontcare", cdp, "dontcare", OsType.CENTOS7.getOs(), "dontcare", List.of()));
+        image.setComponentVersions(new ImageComponentVersions("dontcare", "dontcare", cdp, "dontcare", CENTOS7.getOs(), "dontcare", List.of()));
         return image;
     }
 }
